----------------------------------------------------------------------
Wed Dec 15 00:47:09 2010                        Michael Jennings (mej)

set() for an array now deletes and add()s.
----------------------------------------------------------------------
Thu Dec 16 11:10:26 2010                        Michael Jennings (mej)

Use list address for configure.in.
----------------------------------------------------------------------
Thu Dec 16 12:59:25 2010                        Michael Jennings (mej)

Convert ModuleLoader to on-demand, class-based operation.  This is one
possibility of multiple ones we're considering...just want it in the
SVN history for potential future reference.
----------------------------------------------------------------------
Wed Dec 29 02:13:32 2010                        Michael Jennings (mej)

Use magic filehandle syntax <> if stdin isn't a tty.
----------------------------------------------------------------------
Wed Dec 29 19:39:49 2010                        Michael Jennings (mej)

Rearrange.  Tested, works fine.
----------------------------------------------------------------------
Sat Jan  1 16:07:12 2011                        Michael Jennings (mej)

Rearrange help display a bit to be more clear to the uninitiated.  :-)
----------------------------------------------------------------------
Sun Jan  2 05:36:34 2011                        Michael Jennings (mej)

Work in progress:  Log target handling.
----------------------------------------------------------------------
Fri Mar  4 16:40:23 2011                        Michael Jennings (mej)

Fix bug in Object->set() that wasn't allowing object member values to
be references.
----------------------------------------------------------------------
Sat Mar  5 01:12:07 2011                        Michael Jennings (mej)

Add subversion revision number to RPM release field.

Numerous spec file fixes and cleanups.
----------------------------------------------------------------------