@@ -110,3 +110,7 @@ Add subversion revision number to RPM release field.
 
 Numerous spec file fixes and cleanups.
 ----------------------------------------------------------------------
+Tue Mar 15 15:24:40 2011                        Michael Jennings (mej)
+
+Handle warnings/fatal errors if Debug.pm is loaded by printing a stack trace.
+----------------------------------------------------------------------
